syntax = "proto3";

package order;

service OrderService {
    rpc QueryBalance(QueryBalanceRequest) returns (QueryBalanceResponse){}
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){}
    rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse){}
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse){}
}

message QueryBalanceRequest{
    string address = 1;
}

message QueryBalanceResponse{
    int64 balance = 3;
}

message CreateOrderRequest{
    string address = 1;
    string request_id = 2;
    int64 amount = 3;
}

message CreateOrderResponse{
    int64 order_id = 3;
}

message SubmitOrderRequest{
    int64 order_id = 1;
    string file_name = 2;
    int64 file_size = 3;
    string file_hash = 4;
}

message SubmitOrderResponse{
}

message CancelOrderRequest{

}

message CancelOrderResponse{

}
